--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -22,6 +22,8 @@
   <link href="{{ ASSET_PATH }}/resources/syntax/syntax.css" rel="stylesheet">
   <link href="{{ ASSET_PATH }}/css/style.css" rel="stylesheet">
 
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
   <!-- Le fav and touch icons -->
   <!-- Update these with your own images
   <link rel="shortcut icon" href="images/favicon.ico">
