--- a/assets/themes/dbyll/css/style.css
+++ b/assets/themes/dbyll/css/style.css
@@ -110,27 +110,34 @@ article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decora
 article img { max-width: 100%; }
 
 h1,h2,h3,h4,h5,h6 { font-family: 'Ubuntu', sans-serif; }
-article.home h1,
+article.home h1/*,
 article.home h2,
 article.home h3,
 article.home h4,
 article.home h5,
-article.home h6 {
+article.home h6 */{
   font-family: 'Ubuntu', sans-serif;
   color: #f2756a;
 }
 
-article.home h1 a,
+article.home h1 a/*,
 article.home h2 a,
 article.home h3 a,
-article.home h4 a {
+article.home h4 a */{
   color: #f2756a;
 }
-article.home h1 a:hover,
+
+article.home h1 a:hover/*,
 article.home h2 a:hover,
 article.home h3 a:hover,
-article.home h4 a:hover {
+article.home h4 a:hover 
+*/
+{
   color: #e74c3c;
+}
+
+article.home h2 {
+ font-size: 1em;
 }
 
 .author .author-image {
