--- a/_includes/post.html
+++ b/_includes/post.html
@@ -58,7 +58,7 @@
 		<div>
       <section class="share col-sm-6">
         <h4 class="section-title">Partagez cet article !</h4>
-        <a class="btn btn-default btn-sm twitter" href="http://twitter.com/share?text={{page.title | encode}}{% if site.author.twitter%}&via={{site.author.twitter}}{% endif %}"
+        <a class="btn btn-default btn-sm twitter" href="https://twitter.com/share?text={{page.title | encode}}{% if site.author.twitter%}&via={{site.author.twitter}}{% endif %}"
            onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
           <i class="fa fa-twitter fa-lg"></i>
           Twitter
