--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -12,7 +12,7 @@
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
   <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
   <!-- Le styles -->
@@ -49,12 +49,12 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.author.github %}
-      <a type="button" class="navbar-toggle nav-link" href="http://github.com/{{ site.author.github }}">
+      <a type="button" class="navbar-toggle nav-link" href="https://github.com/{{ site.author.github }}">
         <i class="fa fa-github"></i>
       </a>
       {% endif %}
       {% if site.author.twitter %}
-      <a type="button" class="navbar-toggle nav-link" href="http://twitter.com/{{ site.author.twitter }}">
+      <a type="button" class="navbar-toggle nav-link" href="https://twitter.com/{{ site.author.twitter }}">
         <i class="fa fa-twitter"></i>
       </a>
       {% endif %}
@@ -64,7 +64,7 @@
       </a>
       {% endif %}
       <a class="navbar-brand" href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">
-        <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=35" class="img-circle" />
+        <img src="https://www.gravatar.com/avatar/{{site.author.email_md5}}?s=35" class="img-circle" />
         {{ site.title }}
       </a>
     </div>
@@ -104,7 +104,7 @@
     <hr/>
     <p>
       &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-      with help from <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap-3</a>. Theme: <a href="https://github.com/jekyll-bootstrap-3/dbyll">dbyll</a> by dbtek.
+      with help from <a href="https://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap-3</a>. Theme: <a href="https://github.com/jekyll-bootstrap-3/dbyll">dbyll</a> by dbtek.
     </p>
   </footer>
 
