--- a/_includes/themes/dbyll/sidebar.html
+++ b/_includes/themes/dbyll/sidebar.html
@@ -1,7 +1,7 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.production_url }}">
-		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
+		<img src="https://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
 	</a>
 <!--
 	<h3 class="title">
